src/QGraphicsRectItem.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQGraphicsRectItemCtor_1(void * parent);
EXTERNC void * SCWQGraphicsRectItemCtor_1(void * parent);
EXTERNC void * QWQGraphicsRectItemCtor_2(void * rect, void * parent);
EXTERNC void * SCWQGraphicsRectItemCtor_2(void * rect, void * parent);
EXTERNC void * QWQGraphicsRectItemCtor_3(double  x, double  y, double  w, double  h, void * parent);
EXTERNC void * SCWQGraphicsRectItemCtor_3(double  x, double  y, double  w, double  h, void * parent);
EXTERNC void * QWQGraphicsRectItemrect(void * obj);
EXTERNC void QWQGraphicsRectItemsetRect_1(void * obj, void * rect);
EXTERNC void QWQGraphicsRectItemsetRect_2(void * obj, double  x, double  y, double  w, double  h);
EXTERNC void * QWQGraphicsRectItemboundingRect(void * obj);
EXTERNC int8_t QWQGraphicsRectItemcontains(void * obj, void * point);
EXTERNC void QWvalidateCB_QGraphicsRectItem(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQGraphicsRectItemDtor(void *);
EXTERNC void SCWQGraphicsRectItemDtor(void *);